--- a/fakepinterest/templates/criarconta.html
+++ b/fakepinterest/templates/criarconta.html
@@ -11,10 +11,13 @@
     {{ form.email.label() }}
     {{ form.email() }}
 
+    {{ form.username.label() }}
+    {{ form.username() }}
+
     {{ form.senha.label() }}
     {{ form.senha() }}
 
-    {{ form.confirmacao_senha().label }}
+    {{ form.confirmacao_senha.label() }}
     {{ form.confirmacao_senha() }}
     
     {{ form.botao_confirmacao() }}
