--- a/fakepinterest/templates/perfil.html
+++ b/fakepinterest/templates/perfil.html
@@ -1,12 +1,12 @@
 {% extends "homepage.html" %}
 
 {% block titulo %}
-Perfil - {usuario}
+Perfil - {{usuario}}
 {% endblock %}
 {% block body %}
 <body>
     <h1>Perfil do usuario: {{usuario}}</h1>
 
-    <a href="{{url_for('homepage')}}">Sair</a>
+    <a href="{{url_for('logout')}}">Sair</a>
 </body>
 {% endblock %}
