create feed and navbar

--- a/fakepinterest/templates/perfil.html
+++ b/fakepinterest/templates/perfil.html
@@ -1,10 +1,12 @@
 {% extends "homepage.html" %}
 
 {% block titulo %}
-Perfil - {{usuario}}
+Perfil - {{usuario.username}}
 {% endblock %}
 {% block body %}
 <body>
+{% include "navbar.html" %}
+
     <h1>Perfil do usuario: {{usuario.username}}</h1>
 
 {% if form %}
@@ -15,9 +17,6 @@ Perfil - {{usuario}}
     {{ form.botao_confirmacao}}
 </form>
 {% endif %}
-
-
-<a href="{{url_for('logout')}}">Sair</a>
 
 {% for foto in usuario.fotos %}
     <img src="{{ url_for('static', filename='fotos_posts/{}'.format(foto.imagem)) }}">
